--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
       </div>
     </div>
 
+    <!-- delay controller -->
+     <input type="range" id="delayFeedbackInput" min="0" max="1" step="0.01"/>
+
+     <p id="meterOutput"></p>
     </div>
 
   </body>
